--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -59,7 +59,7 @@
             <text wx:if="{{user.name}}" class="my-info-mail-info-top-txt">{{user.name}}</text>
             <image style="width: 40rpx;" src="/assets/images/my/youke.png" class="my-info-mail-info-top-jb"></image>
           </view>
-          <view class="my-info-mail-info-bottom">用户Id: {{user.id}}</view>
+          <view class="my-info-mail-info-bottom">用户Id {{user.id}}</view>
         </view>
       </view>
       
