--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -53,45 +53,44 @@
   object-fit: contain; /* 确保图片完整显示，不被裁剪 */
 }
 
-/* 反诈科普内容 */
-.info {
-  padding: 20rpx;
-  background-color: #fff;
-  border-radius: 10rpx;
-  box-shadow: 0 2rpx 8rpx rgba(0, 0, 0, 0.1);
-}
-
+/* 反诈科普内容样式 */
 .section-title {
-  font-size: 32rpx;
+  font-size: 36rpx;
   font-weight: bold;
-  margin-bottom: 20rpx;
-  text-align: center;
+  margin: 30rpx 0 20rpx 20rpx;
   color: #333;
 }
 
-.content-box {
+.info-item {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.content-item {
-  width: 48%;
+  margin: 20rpx;
   background-color: #f9f9f9;
-  margin-bottom: 20rpx;
-  border-radius: 10rpx;
-  box-shadow: 0 2rpx 4rpx rgba(0, 0, 0, 0.1);
+  border-radius: 20rpx;
   overflow: hidden;
+  box-shadow: 0 4rpx 8rpx rgba(0, 0, 0, 0.1);
 }
 
-.item-image {
-  width: 100%;
-  height: 180rpx;
+.info-image {
+  width: 220rpx;
+  height: 140rpx;
+  flex-shrink: 0;
 }
 
-.item-text {
-  font-size: 28rpx;
+.info-content {
+  padding: 10rpx 20rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.info-title {
+  font-size: 30rpx;
+  font-weight: bold;
   color: #333;
-  text-align: center;
-  padding: 10rpx 0;
+}
+
+.info-date {
+  font-size: 24rpx;
+  color: #999;
+  margin-top: 10rpx;
 }
