--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -31,12 +31,15 @@
     </view>
     <block wx:for="{{infoList}}" wx:key="index">
       <view class="info-item" bindtap="goToDetail" data-id="{{item.id}}">
-        <image class="info-image" src="/assets/images/index{{item.image}}" mode="aspectFill" />
+        <image class="info-image" src="{{item.image}}" mode="aspectFill" />
         <view class="info-content">
           <text class="info-title">{{item.title}}</text>
           <text class="info-date">{{item.date}}</text>
         </view>
       </view>
     </block>
-  </view>
+    <view wx:if="{{infoList.length === 0}}" class="no-content-container">
+  <text class="no-content-text">暂无内容</text>
+</view>
+</view>
 </view>
