--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -99,3 +99,24 @@
   color: #615c59;
   cursor: pointer;
 }
+/* 容器居中并设置背景 */
+.no-content-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* 使其在页面中垂直居中 */
+  background-color: #f9f9f9; /* 可以设置一个淡灰色背景 */
+}
+
+/* 文本样式 */
+.no-content-text {
+  font-size: 18px;
+  color: #999; /* 灰色字体 */
+  font-weight: 500;
+  text-align: center;
+  padding: 10px 20px;
+  border: 1px solid #ddd; /* 边框 */
+  border-radius: 8px; /* 圆角 */
+  background-color: #fff; /* 白色背景 */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 轻微阴影 */
+}
