实现了管理员查看论坛列表以及删除分类的连接

--- a/pages/forum/forum.wxml
+++ b/pages/forum/forum.wxml
@@ -1,2 +1,4 @@
-<!--pages/forum/forum.wxml-->
-<text>pages/forum/forum.wxml</text>
+<view class="container">
+  <text class="welcome-text">欢迎使用论坛功能</text>
+  <text class="loading-text">正在判断身份，请稍候...</text>
+</view>
