--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -82,6 +82,10 @@
               <image style="width: 46rpx; height: 40rpx;" src="/assets/images/my/woyaofatie.png" class="my-list-wrap-item-list-item-img"></image>
               <text class="my-list-wrap-item-list-item-txt">我要发贴</text>
             </view>
+            <view bindtap="navigate" data-url='/pages/my/forumList/index' class="my-list-wrap-item-list-item">
+              <image style="width: 46rpx; height: 40rpx;" src="/assets/images/my/wodefatie.png" class="my-list-wrap-item-list-item-img"></image>
+              <text class="my-list-wrap-item-list-item-txt">我的发贴</text>
+            </view>
             <view bindtap="navigate" data-url='/pages/my/favoriteList/index' class="my-list-wrap-item-list-item">
               <image style="width: 46rpx; height: 40rpx;" src="/assets/images/my/shoucang.png" class="my-list-wrap-item-list-item-img"></image>
               <text class="my-list-wrap-item-list-item-txt">我的收藏</text>
