实现了论坛详情页能接收富文本样式

--- a/pages/detail/forumDetail/detail.wxml
+++ b/pages/detail/forumDetail/detail.wxml
@@ -10,7 +10,5 @@
   </view>
 
   <!-- 内容 -->
-  <view class="article-content">
-    {{detail.content}}
-  </view>
+  <mp-html content="{{detail.content}}"></mp-html>
 </view>
